# Mandelbrot

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindGLFW.cmake  FindGLM.cmake  Resources.cmake  embedfile.c
include/: utils.h
shader/: mb_32.frag  mb_64.frag  screen.vert
src/: main.cpp  utils.cpp
